# tambouille

./: .gitignore  README.md  pyproject.toml
tambouille/: __init__.py  preprocess.py  prompt.py  tambouille.py  utils.py
