[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tambouille"]

[project]
name = "tambouille"
version = "0.1.0"
description = "Finetune late-interaction multi-modal models such as ColPali on your data in just a few lines of code"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=0.34.2",
    "pdf2image>=1.17.0",
    "pillow>=10.4.0",
    "ruff>=0.6.8",
    "torchvision>=0.19.0",
    "tqdm>=4.66.5",
    "datasets>=3.0.0",
    "colpali-engine>=0.3.1",
    "bitsandbytes>=0.44",
    "wandb>=0.18.1",
    "qwen-vl-utils>=0.0.8",
    "outlines>=0.1.0",
    "torch",
]



